--- a/templates/towers.html
+++ b/templates/towers.html
@@ -621,8 +621,8 @@ function setMaxBet() {
                                         if (payoutEl) {
                                             const betAmount = Number(result.betamount) || 0;
                                             const minesCount = result.mines.length; 
-                                            const cashCalc = betAmount * (r + 1) * ((minesCount / 23) ** 1.5);
-                                            payoutEl.textContent = cashCalc.toFixed(2);
+                                            const cashCal = betAmount * (r + 1) * ((minesCount / 23) ** 1.5);
+                                            payoutEl.textContent = cashCal.toFixed(2);
                                         }
                                     }
                                 });
@@ -979,20 +979,23 @@ function setMaxBet() {
         
             const betAmount = Number(data.betamount) || 0;
             const currentamount = Number(data.amount) || 0;
+            const minesCount = Number(data.minescount) || 0;
+
             document.getElementById('currentAmount').textContent = currentamount;
         
             document.querySelectorAll('.payout').forEach(cell => {
                     const r = Number(cell.dataset.row);       
                     const payoutEl = cell.querySelector('.payout-value');
                     if (payoutEl) {
-                        payoutEl.textContent = betAmount * (r + 1);
+                        const cashCalcu = betAmount * (r + 1) * ((minesCount / 23) ** 1.5);
+                        payoutEl.textContent = cashCalcu.toFixed(2);
                     }
-                
             });
         }; 
     </script>
 </body>
 </html>
+
 
 
 
