--- a/templates/home.html
+++ b/templates/home.html
@@ -551,7 +551,7 @@
            <!-- <img src="https://example.com/towers-image.jpg" alt="Towers Game Image"> -->
             <h3>Towers</h3>
             <p> 
-             Towers is a fast-paced risk-and-reward game. Climb higher by choosing safe blocks while avoiding hidden traps. Each step boosts your multiplier—cash out anytime or risk it all to reach the top. Simple to play, thrilling to master.
+               Climb a tower by selecting safe blocks while avoiding traps. Each step raises your multiplier cash out or risk it all.
             </p> 
               <a href="/towers">Open →</a> 
         </div>  
