--- a/templates/home.html
+++ b/templates/home.html
@@ -547,14 +547,14 @@
 
 <main>
     <div class="cards">
-          <div class="card"> 
+         <!-- <div class="card"> -->
            <!-- <img src="https://example.com/towers-image.jpg" alt="Towers Game Image"> -->
-            <h3>Towers</h3>
-            <p> 
-               Climb a tower by selecting safe blocks while avoiding traps. Each step raises your multiplier cash out or risk it all.
-            </p> 
-              <a href="/towers">Open →</a> 
-        </div>  
+           <!-- <h3>Towers</h3>-->
+           <!-- <p> -->
+             <!--  Climb a tower by selecting safe blocks while avoiding traps. Each step raises your multiplier cash out or risk it all. -->
+           <!-- </p> -->
+           <!--   <a href="/towers">Open →</a> -->
+       <!-- </div>  -->
 
         <div class="card">
             <!-- <img src="https://example.com/mines-image.jpg" alt="Mines Game Image"> -->
